# SimpleBlackBoxCTestCpp

./: .gitignore  BlackBoxTest.cmake  Build.bat  Build.sh  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/example/: CMakeLists.txt  Multiply_by_2.cpp
